<resources>
    <string name="app_name">Ride</string>
    <string name="settings_notifications">Settings</string>
    <string name="settings_new_message_notifications">Message notifications</string>
    <string name="settings_ringtone">Ringone</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="news_and_alerts">News and alerts</string>
    <string name="travel_and_parking">Parking, traffic and jams</string>
    <string name="events_and_shows">Events and shows</string>
    <string name="shopping_and_sales">Shopping and sales</string>
    <string name="categories_of_interest">Categories</string>
    <string name="options">General options</string>
    <string name="receive_all_locals">Broadcasts messages</string>
    <string name="home_messages">Message Center</string>
    <string name="permit_messages">Receive private messages</string>
    <string name="more">more</string>
    <string name="delete_all_messages">Delete all messages?</string>
    <string name="yes">Yes</string>
    <string name="delete_this_message">Delete this message?</string>
    <string name="home">Home</string>
    <string name="shop">Market</string>
    <string name="successfully_subscribed">Subscribed</string>
    <string name="failed_to_subscribe">Failed to subscribe</string>
    <string name="adjustments">Adjustments</string>
    <string name="news">New on Ride</string>
    <string name="subscriptions">Marketplace</string>
    <string name="activate_location">Activate Location</string>
    <string name="no">no</string>
    <string name="free">free</string>
    <string name="successfully_unsubscribed">Unsubscribed</string>
    <string name="failed_to_unsubscribe">Failed to unsubscribe</string>
    <string name="successfully_updated">Updated</string>
    <string name="not_subscribed">Not subscribed</string>
    <string name="general_error">General error</string>
    <string name="successfully_deleted">Deleted</string>
    <string name="too_short">Too short</string>
    <string name="me">Me</string>
    <string name="my_account">My account</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="peep">Ride</string>
    <string name="peep_around">Next to you</string>
    <string name="added_to_favorites">Saved for later</string>
    <string name="failed_to_add_to_favorites">Failed to add to favorites</string>
    <string name="user_blocked">Bye, bye</string>
    <string name="failed_to_block_user">Failed to block user</string>
    <string name="we_have_chosen_each_other">We have chosen each other</string>
    <string name="already_saved">Already saved</string>
    <string name="user_details">Get in touch</string>
    <string name="user_is_blocked">User is blocked</string>

</resources>
