<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_dialog_header"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_location_gray" />

        <TextView
            android:id="@+id/txt_location_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/activate_location"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_location_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/img_location_icon"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/globus" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_location_icon"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@+id/btn_send"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#7f7f7f" />

        <Button
            android:id="@+id/btn_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_location_icon"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#7f7f7f" />

    </RelativeLayout>

</LinearLayout>
